--- a/src/index.css
+++ b/src/index.css
@@ -1,7 +1,8 @@
 body {
   font: 18px "Times New Roman", Futura, sans-serif;
-  margin: 350px;
-  padding-left: 300px;
+  margin: auto;
+  padding: 0;
+
 
 
 
