--- a/src/index.css
+++ b/src/index.css
@@ -1,7 +1,7 @@
 body {
   font: 18px "Times New Roman", Futura, sans-serif;
-  margin: 0;
-  padding: 0;
+  margin: 300px;
+  padding-left: 350px;
 
 
 
